fixed text in details on mobile

--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -59,6 +59,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 140%; /* 22.4px */
+    grid-column: 1 / -1;
 
     @include onDesktop {
       grid-column: span 8;
